<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mi_perfil"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_mi_perfil" />
        <item
            android:id="@+id/nav_mis_licencias"
            android:icon="@drawable/baseline_badge_24"
            android:title="@string/menu_mis_licencias" />
        <item
            android:id="@+id/nav_mis_vehiculos"
            android:icon="@drawable/baseline_directions_car_24"
            android:title="@string/menu_mis_vehiculos" />
        <item
            android:id="@+id/nav_mis_multas"
            android:icon="@drawable/baseline_back_hand_24"
            android:title="@string/menu_mis_multas" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/baseline_back_hand_24"
            android:title="@string/menu_gps" />
    </group>
</menu>