<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mi_perfil"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_mi_perfil" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/menu_usuarios" />
        <item
            android:id="@+id/nav_multas"
            android:icon="@drawable/baseline_back_hand_24"
            android:title="@string/menu_multas" />

    </group>
</menu>